typescript/checker/tests/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration5.ts.stderr
error: Unexpected token Some(Word(Foo))
 --> $DIR/tests/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration5.ts:2:13
  |
2 |     declare Foo() { }
  |             ^^^

